fix: body scroll on mobile and heder z-index

--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ body {
   font-family: 'FiraSans-Regular', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  max-width: 100vw;
 
   letter-spacing: -0.63px;
   font-size: 16px;
